fix(styling): Dark Mode missing focus border styling

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -1100,6 +1100,8 @@ $slick-dark-text-color:                                   #d4d4d4 !default;
   --slick-editor-modal-footer-border-top:                 var(--slick-base-dark-menu-border);
   --slick-editor-modal-input-editor-border:               var(--slick-base-dark-menu-border);
   --slick-editor-modal-checkbox-editor-border:            var(--slick-base-dark-menu-border);
+  --slick-editor-modal-large-editor-border:               var(--slick-base-dark-menu-border);
+  --slick-editor-modal-select-editor-border:              var(--slick-base-dark-menu-border);
   --slick-editor-modal-container-box-shadow:              0 0 2px #606060;
   --slick-editor-modal-reset-btn-bg-color:                #383838;
   --slick-editor-modal-close-btn-bg-color:                transparent;
